fix bug about particle age init

--- a/examples/point_clock.html
+++ b/examples/point_clock.html
@@ -31,7 +31,7 @@
 		} from 't3d-particle';
 
 		// variables used in init()
-		let width, height, scene, camera, renderer, backRenderTarget, clock, fixedTimeStep = false, date, controller;
+		let width, height, scene, camera, renderer, backRenderTarget, clock, fixedTimeStep = true, date, controller;
 
 		// Used in initParticles()
 		let group, secondHand, minuteHand, hourHand;
