--- a/examples/point_explosion.html
+++ b/examples/point_explosion.html
@@ -60,8 +60,8 @@
 			camera.lookAt(new t3d.Vector3(0, 0, 0), new t3d.Vector3(0, 1, 0));
 			scene.add(camera);
 
-			renderer = new t3d.Renderer(gl);
-			renderer.renderPass.setClearColor(0.3, 0.3, 0.3, 1);
+			renderer = new t3d.WebGLRenderer(gl);
+			renderer.setClearColor(0.3, 0.3, 0.3, 1);
 			backRenderTarget = new t3d.RenderTargetBack(canvas);
 
 			clock = new Clock();
@@ -257,8 +257,8 @@
 			scene.updateRenderStates(camera);
 			scene.updateRenderQueue(camera);
 
-			renderer.renderPass.setRenderTarget(backRenderTarget);
-			renderer.renderPass.clear(true, true, false);
+			renderer.setRenderTarget(backRenderTarget);
+			renderer.clear(true, true, false);
 			renderer.renderScene(scene, camera);
 		}
 
