--- a/examples/point_multiple_emitters.html
+++ b/examples/point_multiple_emitters.html
@@ -60,8 +60,8 @@
 			camera.position.z = 500;
 			scene.add(camera);
 
-			renderer = new t3d.Renderer(gl);
-			renderer.renderPass.setClearColor(0, 0, 0, 1);
+			renderer = new t3d.WebGLRenderer(gl);
+			renderer.setClearColor(0, 0, 0, 1);
 			backRenderTarget = new t3d.RenderTargetBack(canvas);
 
 			clock = new Clock();
@@ -162,8 +162,8 @@
 			scene.updateRenderStates(camera);
 			scene.updateRenderQueue(camera);
 
-			renderer.renderPass.setRenderTarget(backRenderTarget);
-			renderer.renderPass.clear(true, true, false);
+			renderer.setRenderTarget(backRenderTarget);
+			renderer.clear(true, true, false);
 			renderer.renderScene(scene, camera);
 		}
 
