feat: Supptor custom distributions.

--- a/examples/point_mouse_follow.html
+++ b/examples/point_mouse_follow.html
@@ -109,7 +109,7 @@
 		function animate() {
 			requestAnimationFrame(animate);
 
-			particleGroup.tick(clock.getDelta());
+			particleGroup.tick();
 
 			scene.updateMatrix();
 			scene.updateRenderStates(camera);
